<resources>
    <string name="app_name">Contacts</string>
    <string name="contact_not_found">Contact not found</string>
    <string name="name_nickname_format">%1$s (%2$s)</string>
    <string name="contact_photo_description">%1$s photo</string>
    <string name="favorite">Favorite</string>
    <string name="share_contact">Share Contact</string>
    <string name="about_name">About %1$s</string>
...
    <string name="system_default">System Default</string>
    <string name="signal">Signal</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="telegram">Telegram</string>
    <string name="google_meet">Google Meet</string>
    <string name="contacts">Contacts</string>
    <string name="groups">Groups</string>
    <string name="select_group_hint">Select a group to view contacts</string>
    <string name="add_to_group">Add to Group</string>
    <string name="add_group">Add Group</string>
    <string name="group_name">Group Name</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="delete_group_title">Delete group</string>
...
